fixes on routes
